Update new icons

--- a/css/nords-new.css
+++ b/css/nords-new.css
@@ -12171,7 +12171,14 @@ figcaption {
 }
 
 .image-9 {
+  object-fit: contain;
   width: 18px;
+  height: 18px;
+}
+
+.image-10 {
+  width: 24px;
+  height: 24px;
 }
 
 @media screen and (max-width: 991px) {
