--- a/css/nords-new.css
+++ b/css/nords-new.css
@@ -52,7 +52,7 @@
   --_spacing---container--padding: var(--spacing--4-rem);
   --_spacing---radius--base: var(--_spacing---radius--sm);
   --_theme---background--secondary: var(--_color---brand--neutral--neutral-01);
-  --_color---brand--neutral--neutral-07: #1b1b1b;
+  --_color---brand--neutral--neutral-07: #010c0a;
   --_spacing---radius--circle: 50%;
   --_spacing---icon--sm: var(--spacing--1-5-rem);
   --spacing--2-rem: 2rem;
@@ -569,9 +569,9 @@ figcaption {
   grid-column-gap: var(--spacing--1-rem);
   grid-row-gap: var(--spacing--1-rem);
   border-radius: var(--_spacing---radius--xs);
-  background-color: var(--_color---brand--neutral--base--overlay--overlay-light);
-  -webkit-backdrop-filter: blur(2px);
-  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  background-color: #ffffff42;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -616,7 +616,7 @@ figcaption {
 }
 
 .header.header--full {
-  min-height: 100svh;
+  min-height: 97.5svh;
 }
 
 .cta__heading {
@@ -737,6 +737,7 @@ figcaption {
 }
 
 .footer__logo-embed {
+  opacity: .5;
   flex: 1;
   align-self: stretch;
 }
@@ -1239,7 +1240,7 @@ figcaption {
   grid-column-gap: 0rem;
   grid-row-gap: 0rem;
   background-color: var(--_theme---background--primary);
-  min-height: 100svh;
+  min-height: 97.5svh;
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -2411,13 +2412,17 @@ figcaption {
   grid-column-gap: var(--spacing--0-5-rem);
   grid-row-gap: var(--spacing--0-5-rem);
   border-radius: var(--_spacing---radius--rounded);
-  background-color: var(--_theme---button--background);
   pointer-events: auto;
   color: var(--_theme---button--text);
   font-size: var(--_typography---body--sm);
   text-align: center;
   white-space: nowrap;
   cursor: pointer;
+  background-color: #040d14;
+  background-image: url('../images/aaltoileva-usva.webp'), linear-gradient(135deg, #040d14, #2d5a27 50%, #040d14);
+  background-position: 0 0, 0 0;
+  background-repeat: no-repeat, repeat;
+  background-size: cover, auto;
   flex-flow: row;
   justify-content: center;
   align-items: center;
@@ -2739,6 +2744,10 @@ figcaption {
   border: 2px solid var(--_theme---button--background);
   color: var(--_theme---button--background);
   background-color: #0000;
+  background-image: none;
+  background-position: 0 0;
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 .btn__component.btn--secondary:where(.w-variant-2b168537-cca3-2386-569d-6c2cf43f0228) {
@@ -2892,6 +2901,10 @@ figcaption {
   grid-row-gap: var(--spacing--0-25-rem);
   color: var(--_theme---text--primary);
   background-color: #0000;
+  background-image: none;
+  background-position: 0 0;
+  background-repeat: repeat;
+  background-size: auto;
   border: 0 #0000;
   border-radius: 0;
   height: auto;
@@ -3012,6 +3025,10 @@ figcaption {
   backdrop-filter: blur(3px);
   color: var(--_color---brand--neutral--base--base-light);
   background-color: #fff3;
+  background-image: none;
+  background-position: 0 0;
+  background-repeat: repeat;
+  background-size: auto;
   border-color: #0000;
   justify-content: space-between;
   align-items: center;
@@ -9532,6 +9549,249 @@ figcaption {
   height: 1rem;
 }
 
+.live-chat-close-icon---brix {
+  z-index: -1;
+  padding: 7px;
+  position: absolute;
+}
+
+.live-chat-bubble-subtext---brix {
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.live-chat-bubble-subtext---brix.whatsapp {
+  color: #7f8d8a;
+}
+
+.live-chat-button---brix {
+  color: #fff;
+  transform-style: preserve-3d;
+  background-color: #4a3aff;
+  border-radius: 60px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
+  text-decoration: none;
+  transition: all .3s;
+  display: flex;
+  box-shadow: 0 6px 18px #0e0d6a24;
+}
+
+.live-chat-button---brix:hover {
+  background-color: #170f49;
+  transform: scale3d(.94, .94, 1.01);
+}
+
+.live-chat-button---brix.whatsapp {
+  background-color: #25d366;
+  box-shadow: 0 6px 18px #112d2d24;
+}
+
+.live-chat-message {
+  background-color: #fff;
+  border: 1px solid #eff0f6;
+  border-radius: 36px 36px 36px 3px;
+  margin-bottom: 14px;
+  padding: 38px 38px 34px;
+  box-shadow: 0 4px 16px #170f4912;
+}
+
+.live-chat-message.nords {
+  aspect-ratio: 2 / 3;
+  background-color: var(--_color---brand--neutral--neutral-07);
+  border-style: none;
+  border-radius: 12px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 4px 16px #14282b14;
+}
+
+.live-chat-content-right {
+  width: 100%;
+}
+
+.live-chat-bubble-title {
+  color: #170f49;
+  margin-bottom: 8px;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 18px;
+}
+
+.live-chat-bubble-title.whatsapp {
+  color: #142b26;
+}
+
+.live-chat-logo---brix {
+  object-fit: contain;
+  padding: 17px;
+}
+
+.live-chat-wrapper {
+  z-index: 2;
+  flex-direction: column;
+  align-items: flex-end;
+  max-width: 380px;
+  display: flex;
+  position: fixed;
+  bottom: 48px;
+  right: 32px;
+}
+
+.live-chat-wrapper.preview-page {
+  width: 20vw;
+  max-width: none;
+  position: fixed;
+}
+
+.live-chat-bubbble---brix {
+  z-index: 1;
+  background-color: var(--_color---brand--neutral--neutral-07);
+  cursor: pointer;
+  transform-style: preserve-3d;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  margin-top: 14px;
+  transition: transform .3s;
+  display: flex;
+  box-shadow: 0 4px 8px #ffffff14;
+}
+
+.live-chat-bubbble---brix:hover {
+  transform: scale3d(.92, .92, 1.01);
+}
+
+.live-chat-bubbble---brix.whatsapp {
+  background-color: #075e54;
+  box-shadow: 0 4px 8px #128c6033;
+}
+
+.live-chat-avatar {
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+}
+
+.live-chat-content {
+  align-items: flex-end;
+  width: 100%;
+  display: flex;
+}
+
+.live-chat-avatar-wrapper {
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  box-shadow: 0 4px 14px #170f491a;
+}
+
+.live-chat-content-left {
+  margin-right: 18px;
+}
+
+.background-video {
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  inset: 0%;
+}
+
+.popup-link-flex {
+  z-index: 1;
+  grid-column-gap: 2rem;
+  grid-row-gap: .5rem;
+  background-color: #0009;
+  flex-flow: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 1.5rem;
+  display: flex;
+  position: absolute;
+  inset: auto 0% 0%;
+}
+
+.link-block {
+  grid-column-gap: .8rem;
+  grid-row-gap: .8rem;
+  color: var(--_color---brand--neutral--base--base-light);
+  font-size: var(--_typography---body--xs);
+  justify-content: center;
+  align-items: center;
+  height: 32px;
+  display: flex;
+}
+
+.popup-image {
+  object-fit: contain;
+  width: auto;
+  height: 16px;
+}
+
+.popup-image.invert {
+  filter: invert();
+}
+
+.image-11 {
+  z-index: 1;
+  opacity: 1;
+  object-fit: contain;
+  width: 35%;
+  height: auto;
+  position: absolute;
+  inset: 1rem auto auto 1rem;
+}
+
+.logo-carousel {
+  margin-top: 3em;
+  overflow: hidden;
+}
+
+.logo-carousel.splide {
+  margin-top: 0;
+}
+
+.splide__track {
+  grid-column-gap: 4vw;
+  grid-row-gap: 4vw;
+  justify-content: flex-start;
+  align-items: center;
+  display: flex;
+}
+
+.splide__list {
+  display: flex;
+}
+
+.splide__slide {
+  flex: none;
+  justify-content: center;
+  align-items: center;
+  min-width: 10vw;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  display: flex;
+}
+
+.logo {
+  aspect-ratio: 4;
+  filter: invert();
+  object-fit: contain;
+  height: 30px;
+}
+
 @media screen and (max-width: 991px) {
   body {
     --_typography---body--md: 1.125rem;
@@ -9734,6 +9994,10 @@ figcaption {
     background-color: var(--_theme---background--primary);
     font-size: var(--_typography---body--sm);
     cursor: pointer;
+    background-image: none;
+    background-position: 0 0;
+    background-repeat: repeat;
+    background-size: auto;
   }
 
   .btn__component.btn--icon-overlay, .btn__component.btn--icon-team {
@@ -10444,6 +10708,11 @@ figcaption {
   .slide-1 {
     width: 450px;
   }
+
+  .live-chat-wrapper {
+    bottom: 24px;
+    right: 24px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -10486,6 +10755,10 @@ figcaption {
     --_spacing---container--max-height: 900px;
   }
 
+  .header.header--full {
+    min-height: 60svh;
+  }
+
   .cta__btn {
     flex-flow: column;
     align-self: stretch;
@@ -10507,6 +10780,10 @@ figcaption {
   .section.section--footer-cta {
     padding-top: var(--spacing--1-rem);
     padding-bottom: var(--spacing--1-rem);
+  }
+
+  .section.section--hero-full {
+    min-height: 60svh;
   }
 
   .heading__btn-wrap.align-center {
@@ -10815,6 +11092,45 @@ figcaption {
   .spacer._2rem {
     height: 2rem;
   }
+
+  .live-chat-button---brix {
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+
+  .live-chat-message {
+    border-top-left-radius: 28px;
+    border-top-right-radius: 28px;
+    border-bottom-right-radius: 28px;
+    padding: 34px 24px 30px;
+  }
+
+  .live-chat-wrapper {
+    max-width: 100%;
+    left: 24px;
+  }
+
+  .live-chat-bubbble---brix {
+    width: 56px;
+    height: 56px;
+  }
+
+  .live-chat-avatar-wrapper {
+    display: none;
+  }
+
+  .live-chat-content-left {
+    margin-right: 0;
+  }
+}
+
+#w-node-_52d1eb35-d1e0-c7f3-62fd-ddf907c5c35f-bfc79103 {
+  grid-area: span 1 / span 2 / span 1 / span 2;
+  place-self: center start;
+}
+
+#w-node-aa3d250e-118b-d286-f886-15ee10fef428-bfc79103 {
+  grid-area: span 1 / span 4 / span 1 / span 4;
 }
 
 #w-node-ae96847a-1d03-ee02-5a2c-63dabd125452-bfc79103 {
@@ -11256,6 +11572,10 @@ figcaption {
 }
 
 @media screen and (max-width: 991px) {
+  #w-node-_52d1eb35-d1e0-c7f3-62fd-ddf907c5c35f-bfc79103 {
+    grid-column: span 4 / span 4;
+  }
+
   #w-node-_4a54bf90-5fb9-fc38-22b5-34eb7da279bd-bfc79103 {
     grid-area: 3 / 1 / 4 / 5;
   }
