Update new works item

--- a/css/nords-new.css
+++ b/css/nords-new.css
@@ -11109,7 +11109,7 @@ figcaption {
   justify-self: stretch;
 }
 
-#w-node-_67c64e6e-0520-f14c-79d0-cb7541856170-bfc79103, #w-node-c2625079-c818-39a0-93c5-8eef7ea9965d-bfc79103, #w-node-_5d676766-cdd3-6e9e-876a-b1b7722512c1-bfc79103, #w-node-_8f3ad680-9334-709d-e5c0-d974c12f751b-bfc79103, #w-node-fd3fec68-5eb5-1a48-150f-94967f6aef9b-bfc79103, #w-node-_8e995244-7d11-4022-2ed0-36009f4374d1-bfc79103 {
+#w-node-_67c64e6e-0520-f14c-79d0-cb7541856170-bfc79103, #w-node-c2625079-c818-39a0-93c5-8eef7ea9965d-bfc79103, #w-node-_5d676766-cdd3-6e9e-876a-b1b7722512c1-bfc79103, #w-node-caf81fd6-abcc-e8c3-483a-cb3bbe6f480d-bfc79103, #w-node-_8f3ad680-9334-709d-e5c0-d974c12f751b-bfc79103, #w-node-_8e995244-7d11-4022-2ed0-36009f4374d1-bfc79103 {
   justify-self: stretch;
 }
 
@@ -11365,7 +11365,7 @@ figcaption {
   place-self: end;
 }
 
-#w-node-d8ac05f2-31bb-1f6a-ec02-f38754880684-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f3875488068e-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f38754880697-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a0-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a9-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806b2-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806bb-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806c4-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806cd-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806d6-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806df-bfc791d6, #w-node-_08f38150-9cdf-d71f-61cf-769b14fb9a6d-bfc791d6 {
+#w-node-d8ac05f2-31bb-1f6a-ec02-f38754880684-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f3875488068e-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f38754880697-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a0-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a9-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806b2-bfc791d6, #w-node-_71bf4c30-ec27-c681-c437-47b104edfd83-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806bb-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806c4-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806cd-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806d6-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806df-bfc791d6, #w-node-_08f38150-9cdf-d71f-61cf-769b14fb9a6d-bfc791d6 {
   justify-self: stretch;
 }
 
@@ -11757,7 +11757,7 @@ figcaption {
     grid-area: span 1 / span 4 / span 1 / span 4;
   }
 
-  #w-node-_67c64e6e-0520-f14c-79d0-cb7541856170-bfc79103, #w-node-c2625079-c818-39a0-93c5-8eef7ea9965d-bfc79103, #w-node-_5d676766-cdd3-6e9e-876a-b1b7722512c1-bfc79103, #w-node-_8f3ad680-9334-709d-e5c0-d974c12f751b-bfc79103, #w-node-fd3fec68-5eb5-1a48-150f-94967f6aef9b-bfc79103, #w-node-_8e995244-7d11-4022-2ed0-36009f4374d1-bfc79103 {
+  #w-node-_67c64e6e-0520-f14c-79d0-cb7541856170-bfc79103, #w-node-c2625079-c818-39a0-93c5-8eef7ea9965d-bfc79103, #w-node-_5d676766-cdd3-6e9e-876a-b1b7722512c1-bfc79103, #w-node-caf81fd6-abcc-e8c3-483a-cb3bbe6f480d-bfc79103, #w-node-_8f3ad680-9334-709d-e5c0-d974c12f751b-bfc79103, #w-node-_8e995244-7d11-4022-2ed0-36009f4374d1-bfc79103 {
     grid-area: span 1 / span 2 / span 1 / span 2;
   }
 
@@ -11779,7 +11779,7 @@ figcaption {
     place-self: end start;
   }
 
-  #w-node-d8ac05f2-31bb-1f6a-ec02-f38754880684-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f3875488068e-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f38754880697-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a0-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a9-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806b2-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806bb-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806c4-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806cd-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806d6-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806df-bfc791d6, #w-node-_08f38150-9cdf-d71f-61cf-769b14fb9a6d-bfc791d6 {
+  #w-node-d8ac05f2-31bb-1f6a-ec02-f38754880684-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f3875488068e-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f38754880697-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a0-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a9-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806b2-bfc791d6, #w-node-_71bf4c30-ec27-c681-c437-47b104edfd83-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806bb-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806c4-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806cd-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806d6-bfc791d6, #w-node-d8ac05f2-31bb-1f6a-ec02-f387548806df-bfc791d6, #w-node-_08f38150-9cdf-d71f-61cf-769b14fb9a6d-bfc791d6 {
     grid-area: span 1 / span 2 / span 1 / span 2;
   }
 
